Networking/ingress-nodeport.yaml
apiVersion: v1
kind: Service 
metadata:
    name: nginx-ingress 
spec:
    type: NodePort 
    ports:
        - port: 80
          targetPort: 80
          protocol: TCP 
          name: http 
          nodePort: 30030
        - port: 443
          targetPort: 443 
          protocol: TCP 
          name: https 
        selector:
            name: nginx-ingress
