Networking/ingress-service-1.yaml
apiVersion: extensions/v1beta1
kind: Ingress 
metadata:
    name: ingress-service-1
spec:
    backend:
        serviceName: service-1 
        servicePort: 80
